gcc/testsuite/gcc.dg/parse-else-error-3.c
/* PR 23722 */
/* { dg-do compile } */
/* { dg-require-effective-target gcc_frontend } */
/* { dg-options "-fsyntax-only" } */
int f()
{

  else  /* { dg-error "'else' without a previous 'if'" } */
    {
      return 0;
    }
}
